--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
   "require": {
     "php": "^7.0",
     "symfony/framework-bundle": "3.4.* || 4.1.*",
-    "contao/core-bundle": "^4.4"
+    "contao/core-bundle": "^4.4",
+    "alnv/contao-geocoding": "^1.0"
   },
   "config": {
     "preferred-install": "dist"
